--- a/import_product_inventory/wizard/export_product_view.xml
+++ b/import_product_inventory/wizard/export_product_view.xml
@@ -2,10 +2,10 @@
 <odoo>
     <data>
         <record id="view_export_product_inventory_to_file_form" model="ir.ui.view">
-            <field name="name">Export Product form</field>
+            <field name="name">Batch product export form</field>
             <field name="model">export.product.with.inventory.file</field>
             <field name="arch" type="xml">
-                <form string="Export Product to file">
+                <form string="Batch product export to file">
                 	<group>
                 		<field name="file_data" invisible="1"/>
                 	</group>
@@ -18,7 +18,7 @@
         </record>
         
         <record id="action_export_product_to_file" model="ir.actions.act_window">
-            <field name="name">Export Product</field>
+            <field name="name">Batch product export</field>
             <field name="res_model">export.product.with.inventory.file</field>
             <field name="view_type">form</field>
             <field name="view_mode">form</field>
@@ -36,7 +36,7 @@
 	    </record> -->
 		<menuitem id="main_action_export_product_to_file"
         	parent="stock.menu_stock_inventory_control"
-        	name="Export Product"
+        	name="Batch product export"
         	action="action_export_product_to_file"
         	sequence="152"/>
     </data>
