--- a/import_product_inventory/wizard/import_product_wizard_view.xml
+++ b/import_product_inventory/wizard/import_product_wizard_view.xml
@@ -2,10 +2,10 @@
 <odoo>
     <data>
         <record id="view_import_product_inventory_from_file_form" model="ir.ui.view">
-            <field name="name">Import Product form</field>
+            <field name="name">Batch product import form</field>
             <field name="model">import.product.from.file</field>
             <field name="arch" type="xml">
-                <form string="Import Product from file">
+                <form string="Batch product import from file">
                 	<group>
                 		<field name="import_file" required="1" filename="file_name" accept='.xls, .xlsx'/>
                 		<field name="file_name" invisible="1"/>
@@ -20,7 +20,7 @@
         </record>
         
         <record id="action_import_purchase_order_from_xml_file" model="ir.actions.act_window">
-            <field name="name">Import Product</field>
+            <field name="name">Batch product import</field>
             <field name="res_model">import.product.from.file</field>
             <field name="view_type">form</field>
             <field name="view_mode">form</field>
@@ -29,7 +29,7 @@
 
 		<menuitem id="main_action_import_purchase_order_from_xml_file"
         	parent="stock.menu_stock_inventory_control"
-        	name="Import Product"
+        	name="Batch product import"
         	action="action_import_purchase_order_from_xml_file"
         	groups="import_product_inventory.group_import_product_inventory"
         	sequence="151"/>
