--- a/import_product_inventory/views/product_import_batch_view.xml
+++ b/import_product_inventory/views/product_import_batch_view.xml
@@ -7,26 +7,48 @@
             <field name="arch" type="xml">
                 <form string="Batch product import status Form" create="false" edit="false">
                     <header>
-                    	<button string="Import Product" type="object" name="action_import_product_data" class="oe_highlight" attrs="{'invisible':[('state','=','imported')]}"/>
-                    	<field name="state" widget="statusbar"/>
+                        <button string="Import Product" type="object" name="action_import_product_data" class="oe_highlight" attrs="{'invisible':[('state','=','imported')]}"/>
+                        <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
                         <group>
                             <group>
-                        		<field name="name" readonly="1"/>
-                        		<field name="inventory_option" readonly="1"/>    
+                                <field name="name" readonly="1"/>
+                                <field name="inventory_option" readonly="1"/>
                             </group>
                             <group>
-                            	<field name="create_date" readonly="1"/>
+                                <field name="create_date" readonly="1"/>
+                                <field name="pending" readonly="1"/>
+                                <field name="imported" readonly="1"/>
+                                <field name="failed" readonly="1"/>
                             </group>
                         </group>
-                    	<field name="data" readonly="1"/>
+                        <notebook>
+                            <page name="data" string="Data">
+                                <field name="data" readonly="1"/>
+                            </page>
+                            <page name="import_success_ids" string="Imported Products">
+                                <field name="import_success_ids" readonly="1">
+                                    <tree>
+                                        <field name="product_id"/>
+                                    </tree>
+                                </field>
+                            </page>
+                            <page name="import_fail_ids" string="Failed Products">
+                                <field name="import_fail_ids" readonly="1">
+                                    <tree>
+                                        <field name="product_id"/>
+                                        <field name="fail_reason"/>
+                                    </tree>
+                                </field>
+                            </page>
+                        </notebook>
                     </sheet>
                     <div class="oe_chatter">
-	                    <field name="message_follower_ids" widget="mail_followers"/>
-	                    <field name="activity_ids" widget="mail_activity"/>
-	                    <field name="message_ids" widget="mail_thread"/>
-	                </div>
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="activity_ids" widget="mail_activity"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
@@ -37,6 +59,9 @@
                 <tree string="Batch product import status Tree" create="false" edit="false">
                     <field name="name"/>
                     <field name="create_date" />
+                    <field name="pending" />
+                    <field name="imported" />
+                    <field name="failed" />
                     <field name="state" />
                 </tree>
             </field>
@@ -49,10 +74,10 @@
             <field name="view_id" ref="view_product_import_batch_tree"/>
         </record>
         <menuitem id="main_action_view_product_import_batch"
-        	parent="stock.menu_stock_inventory_control"
-        	name="Batch product import status"
-        	action="action_view_product_import_batch"
-        	groups="import_product_inventory.group_import_product_inventory"
-        	sequence="150"/>
+            parent="stock.menu_stock_inventory_control"
+            name="Batch product import status"
+            action="action_view_product_import_batch"
+            groups="import_product_inventory.group_import_product_inventory"
+            sequence="150"/>
     </data>
 </odoo>
