--- a/weight_cal/view/manufacture.xml
+++ b/weight_cal/view/manufacture.xml
@@ -14,6 +14,19 @@
     </record>
 
 
+     <record id="mrp_order_inherit_view"  model="ir.ui.view">
+        <field name="name">manufacture order </field>
+        <field name="model">mrp.production</field>
+        <field name="inherit_id" ref="mrp.mrp_production_form_view"/>
+        <field name="arch" type="xml">
+            <data>
+                  <xpath expr="//field[@name='move_raw_ids']/tree/field[@name='product_id']" position="after">
+            <field name="weight_mo"/>
+        </xpath>
+            </data>
+        </field>
+    </record>
+
     <record id="mrp_bom_line_inherit_new"  model="ir.ui.view">
         <field name="name">manufacture </field>
         <field name="model">mrp.bom</field>
